Catch And Throw, plus Index changes

--- a/catch-and-throw.html
+++ b/catch-and-throw.html
@@ -34,21 +34,18 @@
 	<div class="w3-main w3-content" style="max-width:1920px; margin-top:64px">
 		<div class="w3-container w3-center w3-margin-top w3-text-black w3-padding-32">
 			<!-- TITLE -->
-			<h1 class="project-page-heading" style="margin-bottom: 20px"><b>SPOOKY CRYPTID DATING</b></h1>
+			<h1 class="project-page-heading" style="margin-bottom: 20px"><b>CATCH AND THROW</b></h1>
 			<!-- First Row -->
 			<div class="w3-row">
 				<!-- Video/Logo -->
-				<div class="w3-content w3-half">
-					<img src="Images/SpookyCryptidDatingPic1.png" alt="SpookyCryptidDating" style="width: 100%">
+				<div class="w3-half w3-center">
+					<img src="Images/Placeholder.png" alt="Placeholder" style="width:100%">
 				</div>
 				<!-- About The Game -->
 				<div class="w3-content w3-half w3-justify" style="max-width:1000px; margin: auto">
 					<h1 class="w3-center project-page-about">About The Game</h1>
-					<p class="w3-center w3-padding project-page-about">A <b>2D visual-novel</b> where you use the keyboard to <b>interact with and court</b> various cryptids! <b>Make friends</b> as the new kid in town, and maybe <b>find a partner</b> along the way? Featuring <b>preferred pronoun selection</b>, <b>branching dialogue trees</b>, and other <b>player-influenced mechanics</b>!</p>
-					<!--<a href=https://globalgamejam.org/2019/games/sleepy-jeoff>
-						<img src="Images/GGJLogo.png" style="width:20%" onclick="onClick(this)" class="center" alt="GGJLogo">
-						<h3 class="w3-center">Click here to download from itch.io!</h3>
-					</a>-->
+					<p class="w3-center w3-padding project-page-about">A <b>3D Virtual Reality game</b> for use with <b>the Oculus Quest</b>, developed on the <b>Oculus Rift</b> during my <b>co-op internship</b>. Pick up and throw objects in <b>real-world space</b> and throw them into <b>varying targets</b> as you travel between <b>different environments</b>! Features <b>calibration options</b> for players of <b>different heights</b>, players with differing <b>dominant hand</b>, and also different <b>progression options!</b></p>
+					<p class="w3-center w3-padding project-page-about">Unfortunately, because this is a <b>research game</b> designed for in-house use, I cannot provide a download link.</p>
 				</div>
 			</div>
 			<!-- Second Row -->
@@ -57,36 +54,40 @@
 				<div class="w3-third">
 					<h2 class="project-page-heading">Roles</h2>
 					<p class="w3-center project-page-about">Programming</p>
-					<p class="w3-center project-page-about">Asset Integration</p>
+					<p class="w3-center project-page-about">VR Integration</p>
+					<p class="w3-center project-page-about">Game Design</p>
 				</div>
 				<!-- Engine -->
 				<div class="w3-third">
 					<h2 class="project-page-heading">Engine</h2>
-					<p class="w3-center project-page-about">Ren'Py</p>
+					<p class="w3-center project-page-about">Unity</p>
 				</div>
 				<!-- Contribution(s) -->
 				<div class="w3-third">
 					<h2 class="project-page-heading">Contributions</h2>
-					<p class="w3-center project-page-about">Implemented writers' script into visual novel format</p>
-					<p class="w3-center project-page-about">Coded branching menu options to allow for player choice</p>
-					<p class="w3-center project-page-about">Integrated art and sound assets</p>
+					<p class="w3-center project-page-about">Scripted objects to interact with VR controllers and emulate real-world physics</p>
+					<p class="w3-center project-page-about">Programmed calibration scene to adjust game for players of different heights</p>
+					<p class="w3-center project-page-about">Sought out and implemented art and sound assets</p>
+					<p class="w3-center project-page-about">Conducted tests with third-party users and iterated on feedback</p>
+					<p class="w3-center project-page-about">Optimized game to export to Oculus Quest VR headset</p>
 				</div>
 			</div>
 			<!-- About the Process -->
 			<div class="w3-row w3-margin-top">
 				<h1 class="project-page-about">About The Process</h1>
-				<p class="project-page-about-process">This project was my <b>introduction to the Ren'Py game engine</b>, as well as my first time <b>programming in Python</b>. Thankfully, both were less complicated than I had initially feared, and <b>I learned a lot in a short period</b>. For a few of our project members, this was <b>their first game jam</b>, and I really enjoyed being a part of their introduction to <b>one of my favorite extracurricular activities</b>! Ren'Py was a <b>very different game engine</b> from ones I had worked with previously (Unity and Unreal), but I really enjoyed the variety, and appreciated how <b>well-designed it was for this genre of game</b>. Because it was made in a shorter timeframe, with a team that was scattered across different schools and with tight schedules, the game is <b>currently unfinished</b>. However, we have been <b>talking about continuing its development</b>, which I would love to stay a part of!</b></p>
+				<p class="project-page-about-process">This is one of two projects I've been working on for <b>my co-op internship</b>, the other one being <a href="pong-and-obstacles.html">Pong & Obstacles.</a> As with that game, it is designed for <b>physical therapy research</b>, in this case to help research <b>how children learn to complete tasks when placed in different environments</b>. Also like <a href="pong-and-obstacles.html">Pong & Obstacles</a>, I am the only dedicated project member, so I <b>work largely independently.</b> I meet with my supervisor weekly to discuss goals and set deadlines, but when challenges crop up <b>I have to take the initiative to solve them myself.</b> I have been fortunate enough to be connected to different sources where I can ask questions, which is very helpful since this co-op is <b>my first time working solo with VR technology.</b> It has been a very <b>rewarding process</b>, for all its challenges. I've learned about <b>calibrating VR experiences for different players</b>, working with <b>different VR headsets and their unique quirks</b>, and how to <b>collect and store data for external use</b>. I finish co-op in mid-December, and am excited to <b>finish this project</b> before then!</p>
 			</div>
 			<!-- Misc. pics of game -->
 			<div class="w3-row w3-margin-top">
 				<div class="w3-half w3-padding">
-					<img src="Images/SpookyCryptidDatingPic2.png" style="width:100%" class="center" alt="SpookyCryptidDating">
+					<img src="Images/Placeholder.png" style="width:100%" class="center" alt="Placeholder">
 				</div>
 				<div class="w3-half w3-padding">
-					<img src="Images/SpookyCryptidDatingPic3.png" style="width:100%" class="center" alt="SpookyCryptidDating">
+					<img src="Images/Placeholder.png" style="width:100%" class="center" alt="Placeholder">
 				</div>
 			</div>
 		</div>
+
 		<div class="w3-light-grey w3-center w3-padding-24">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></div>
 	</div>
 
