--- a/index.html
+++ b/index.html
@@ -33,13 +33,26 @@
 	<!-- !PAGE CONTENT! -->
 	<div class="w3-main w3-content" style="max-width:1920px;margin-top:84px">
 		<div class="w3-row">
-			<h1 class="index-main w3-center">PROJECTS</h1>
+			<h1 class="index-main w3-center"><b>PROJECTS</b></h1>
 		</div>
+		<!--<div class="w3-row">
+			<div class="w3-third w3-padding"></div>
+			<div class="w3-third w3-padding">
+				<div class="">
+					<a href=sleepy-jeoff.html>
+						<img src="Images/SleepyJeoffLogo.png" style="width:100%" alt="SleepyJeoff">
+						<h3 class="w3-center">Sleepy Jeoff</h3>
+						<p class="w3-center">Programming, Asset Integration, Game Design</p>
+					</a>
+				</div>
+			</div>
+			<div class="w3-third w3-padding"></div>
+		</div>-->
 		<div class="w3-row">
 			<div class="w3-third w3-padding">
 				<div class="">
 					<a href=bird-brigade.html>
-						<img src="Images/BirdBrigadeLogo.png" style="width:100%" onclick="onClick(this)" alt="Bird Brigade">
+						<img src="Images/BirdBrigadeLogo.png" style="width:100%" alt="BirdBrigade">
 						<h3 class="w3-center">Bird Brigade</h3>
 						<p class="w3-center">UI/UX Design, Programming, Playtest Administration</p>
 					</a>
@@ -48,7 +61,7 @@
 			<div class="w3-third w3-padding">
 				<div class="">
 					<a href=sleepy-jeoff.html>
-						<img src="Images/SleepyJeoffLogo.png" style="width:100%" onclick="onClick(this)" alt="Sleepy Jeoff">
+						<img src="Images/SleepyJeoffLogo.png" style="width:100%" alt="SleepyJeoff">
 						<h3 class="w3-center">Sleepy Jeoff</h3>
 						<p class="w3-center">Programming, Asset Integration, Game Design</p>
 					</a>
@@ -57,7 +70,7 @@
 			<div class="w3-third w3-padding">
 				<div class="">
 					<a href=spooky-cryptid-dating.html>
-						<img src="Images/SpookyCryptidDatingTitle.png" style="width:100%" class= "w3-center" onclick="onClick(this)" alt="Save Our Singles">
+						<img src="Images/SpookyCryptidDatingTitle.png" style="width:100%" class= "w3-center" alt="SpookyCryptidDating">
 						<h3 class="w3-center">Spooky Cryptid Dating</h3>
 						<p class="w3-center">Programming, Asset Integration</p>
 					</a>
@@ -65,43 +78,39 @@
 			</div>
 		</div>
 		<div class="w3-row">
-			<div class="w3-row">
-				<div class="w3-col m2 w3-center">
-			    	<p></p>
-				</div>
-		    	<div class="w3-col m4 w3-center w3-padding">
-		    		<a href=sleepy-jeoff.html>
-						<img src="Images/SleepyJeoffLogo.png" style="width:100%" onclick="onClick(this)" alt="Sleepy Jeoff">
-						<h3 class="w3-center">Catch And Throw</h3>
-						<h4 class="w3-center">[IN PROGRESS]</h4>
-						<p class="w3-center">Co-op/Internship Work</p>
-					</a>
-		    	</div>
-		    	<div class="w3-col m4 w3-center w3-padding">
-		      		<a href=sleepy-jeoff.html>
-						<img src="Images/SleepyJeoffLogo.png" style="width:100%" onclick="onClick(this)" alt="Sleepy Jeoff">
-						<h3 class="w3-center">Pong & Obstacles</h3>
-						<h4 class="w3-center">[IN PROGRESS]</h4>
-						<p class="w3-center">Co-op/Internship Work</p>
-					</a>
-		    	</div>
-		    	<div class="w3-col m2 w3-center">
-		    		<p></p>
-		    	</div>
-	  		</div>
+			<div class="w3-col m2 w3-center w3-padding">
+		    	<p></p>
+			</div>
+	    	<div class="w3-col m4 w3-center w3-padding">
+	    		<a href=catch-and-throw.html>
+					<img src="Images/Placeholder.png" style="width:100%" alt="Placeholder">
+					<h3 class="w3-center">Catch And Throw</h3>
+					<h4 class="w3-center">[IN PROGRESS]</h4>
+					<p class="w3-center">Co-op/Internship Work</p>
+				</a>
+	    	</div>
+	    	<div class="w3-col m4 w3-center w3-padding">
+	      		<a href=pong-and-obstacles.html>
+					<img src="Images/Placeholder.png" style="width:100%" alt="Placeholder">
+					<h3 class="w3-center">Pong & Obstacles</h3>
+					<h4 class="w3-center">[IN PROGRESS]</h4>
+					<p class="w3-center">Co-op/Internship Work</p>
+				</a>
+	    	</div>
+	    	<div class="w3-col m2 w3-center w3-padding">
+	    		<p></p>
+	    	</div>
 		</div>
 
 		<!-- Footer -->
 		<footer class="w3-container w3-padding-32 w3-indigo">  
 			<div class="w3-row-padding">
-			<!--<div class="w3-row">-->
-		        <h3 class="w3-center">INFO</h3>
-		        <h>Welcome to my portfolio!</h>
-		        <p>Click on any of the logos above to learn more about the project, and what I contributed to it.</p>
-		        <p>You can also use the sidebar to navigate to different parts of this website, including a page about me, my resume, and details on how to contact me.</p>
+	        	<h3 class="w3-center">Welcome to my website!</h3>
+		        <p class="w3-center"><b>Click on any of the pictures above</b> to learn more about the project and <b>what I contributed</b> to it. Some even have <b>download links!</b></p>
+		        <p class="w3-center">You can also <b>use the sidebar</b> to navigate to different parts of this website, including a page <b>about me</b>, my <b>resume</b>, and details on <b>how to contact me</b>. I look forward to working with you!</p>
 		    </div>
 		</footer>
-		  
+
 		<div class="w3-light-grey w3-center w3-padding-24">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></div>
 
 	<!-- End page content -->
