--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
   <!-- PAGE CONTENT -->
   <div class="w3-main w3-content" style="max-width:1920px;margin-top:84px">
     <div class="w3-container w3-center w3-margin-top w3-text-dark-grey w3-padding-32" id="about">
-      <h4 class="about-heading"><b>About Me</b></h4>
+      <h4 class="about-heading"><b>ABOUT ME</b></h4>
       <img style="display: block" src="Images/Liam.png" alt="Me" class="w3-image w3-half w3-center w3-padding-32" width="80%" height="80%">
       <div class="w3-content w3-half w3-justify w3-padding-32" style="max-width:1000px; margin: auto">
         <h1 class="w3-center"> Hi there!</h1>
