--- a/sleepy-jeoff.html
+++ b/sleepy-jeoff.html
@@ -34,7 +34,7 @@
 	<div class="w3-main w3-content" style="max-width:1920px; margin-top:64px">
 		<div class="w3-container w3-center w3-margin-top w3-text-black w3-padding-32">
 			<!-- TITLE -->
-			<h1 class="project-page-heading" style="margin-bottom: 20px">SLEEPY JEOFF</h1>
+			<h1 class="project-page-heading" style="margin-bottom: 20px"><b>SLEEPY JEOFF</b></h1>
 			<!-- First Row -->
 			<div class="w3-row">
 				<!-- Video/Logo -->
