Pong And Obstacles page

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 		    	<p></p>
 			</div>
 	    	<div class="w3-col m4 w3-center w3-padding">
-	    		<a href=catch-and-throw.html>
+	    		<a href=throw-at-target.html>
 					<img src="Images/Placeholder.png" style="width:100%" alt="Placeholder">
-					<h3 class="w3-center">Catch And Throw</h3>
+					<h3 class="w3-center">Throw At Target</h3>
 					<h4 class="w3-center">[IN PROGRESS]</h4>
 					<p class="w3-center">Co-op/Internship Work</p>
 				</a>
@@ -107,7 +107,7 @@
 			<div class="w3-row-padding">
 	        	<h3 class="w3-center">Welcome to my website!</h3>
 		        <p class="w3-center"><b>Click on any of the pictures above</b> to learn more about the project and <b>what I contributed</b> to it. Some even have <b>download links!</b></p>
-		        <p class="w3-center">You can also <b>use the sidebar</b> to navigate to different parts of this website, including a page <b>about me</b>, my <b>resume</b>, and details on <b>how to contact me</b>. I look forward to working with you!</p>
+		        <p class="w3-center">You can also <b>use the sidebar</b> to navigate to different parts of this website, including a page <a href="about.html">about me</a>, my <a href="resume.html">resume</a>, and details on <a href="contact.html">how to contact me</a>. I look forward to working with you!</p>
 		    </div>
 		</footer>
 
