--- a/throw-at-target.html
+++ b/throw-at-target.html
@@ -34,7 +34,7 @@
 	<div class="w3-main w3-content" style="max-width:1920px; margin-top:64px">
 		<div class="w3-container w3-center w3-margin-top w3-text-black w3-padding-32">
 			<!-- TITLE -->
-			<h1 class="project-page-heading" style="margin-bottom: 20px"><b>CATCH AND THROW</b></h1>
+			<h1 class="project-page-heading" style="margin-bottom: 20px"><b>THROW AT TARGET</b></h1>
 			<!-- First Row -->
 			<div class="w3-row">
 				<!-- Video/Logo -->
@@ -44,7 +44,7 @@
 				<!-- About The Game -->
 				<div class="w3-content w3-half w3-justify" style="max-width:1000px; margin: auto">
 					<h1 class="w3-center project-page-about">About The Game</h1>
-					<p class="w3-center w3-padding project-page-about">A <b>3D Virtual Reality game</b> for use with <b>the Oculus Quest</b>, developed on the <b>Oculus Rift</b> during my <b>co-op internship</b>. Pick up and throw objects in <b>real-world space</b> and throw them into <b>varying targets</b> as you travel between <b>different environments</b>! Features <b>calibration options</b> for players of <b>different heights</b>, players with differing <b>dominant hand</b>, and also different <b>progression options!</b></p>
+					<p class="w3-center w3-padding project-page-about">A <b>3D Virtual Reality game</b> for use with <b>the Oculus Quest</b>, developed on the <b>Oculus Rift</b> during my <b>co-op internship at Northeastern's ReGame-VR Lab</b>. Pick up and throw objects in <b>real-world space</b> and throw them into <b>varying targets</b> as you travel between <b>different environments</b>! Features <b>calibration options</b> for players of <b>different heights</b>, players with differing <b>dominant hand</b>, and also different <b>progression options!</b></p>
 					<p class="w3-center w3-padding project-page-about">Unfortunately, because this is a <b>research game</b> designed for in-house use, I cannot provide a download link.</p>
 				</div>
 			</div>
@@ -75,7 +75,7 @@
 			<!-- About the Process -->
 			<div class="w3-row w3-margin-top">
 				<h1 class="project-page-about">About The Process</h1>
-				<p class="project-page-about-process">This is one of two projects I've been working on for <b>my co-op internship</b>, the other one being <a href="pong-and-obstacles.html">Pong & Obstacles.</a> As with that game, it is designed for <b>physical therapy research</b>, in this case to help research <b>how children learn to complete tasks when placed in different environments</b>. Also like <a href="pong-and-obstacles.html">Pong & Obstacles</a>, I am the only dedicated project member, so I <b>work largely independently.</b> I meet with my supervisor weekly to discuss goals and set deadlines, but when challenges crop up <b>I have to take the initiative to solve them myself.</b> I have been fortunate enough to be connected to different sources where I can ask questions, which is very helpful since this co-op is <b>my first time working solo with VR technology.</b> It has been a very <b>rewarding process</b>, for all its challenges. I've learned about <b>calibrating VR experiences for different players</b>, working with <b>different VR headsets and their unique quirks</b>, and how to <b>collect and store data for external use</b>. I finish co-op in mid-December, and am excited to <b>finish this project</b> before then!</p>
+				<p class="project-page-about-process">This is one of two projects I've been working on for <b>my co-op internship</b>, the other one being <a href="pong-and-obstacles.html">Pong & Obstacles.</a> As with that game, it is designed for <b>physical therapy research</b>, in this case to help research <b>how children learn to complete tasks when placed in different environments</b>. Also like <a href="pong-and-obstacles.html">Pong & Obstacles</a>, I am the only dedicated project member, so I <b>work largely independently.</b> I meet with my supervisor weekly to discuss goals and set deadlines, but when challenges crop up <b>I have to take the initiative to solve them myself.</b> I have been fortunate enough to be connected to different sources where I can ask questions, which is very helpful since this co-op is <b>my first time working solo with VR technology.</b> It has been a very <b>rewarding process</b>, for all its challenges. From this project I've learned about <b>calibrating VR experiences for different players</b>, working with <b>different VR headsets and their unique quirks</b>, and how to <b>collect and store data for external use</b>. I finish co-op in mid-December, and am excited to <b>finish this project</b> before then!</p>
 			</div>
 			<!-- Misc. pics of game -->
 			<div class="w3-row w3-margin-top">
