--- a/bird-brigade.html
+++ b/bird-brigade.html
@@ -47,9 +47,9 @@
 					<p class="w3-center w3-padding project-page-about">A <b>2D shoot-'em-up game</b> where you <b>use the keyboard and mouse</b> to <b>dodge bullets</b> and <b>fire back</b> bullets of your own. Pick up <b>power-ups</b> to earn bonuses, such as a <b>protective shield</b> or <b>rapid-fire mode</b>! Fight <b>multiple different bosses</b>, each with their own <b>unique attack pattern</b> as you try to survive.</p>
 					<!--
 					<a href=https://globalgamejam.org/2019/games/sleepy-jeoff>
-						<img src="Images/GGJLogo.png" style="width:20%" onclick="onClick(this)" class="center" alt="GGJLogo">
-						<h3 class="w3-center">Click here to download from itch.io!</h3>
-					</a>-->
+						<img src="Images/GGJLogo.png" style="width:20%" onclick="onClick(this)" class="center" alt="GGJLogo">-->
+						<h3 class="w3-center">Download link coming soon!</h3>
+					<!--</a>-->
 				</div>
 			</div>
 			<!-- Second Row -->
