--- a/spooky-cryptid-dating.html
+++ b/spooky-cryptid-dating.html
@@ -46,9 +46,9 @@
 					<h1 class="w3-center project-page-about">About The Game</h1>
 					<p class="w3-center w3-padding project-page-about">A <b>2D visual-novel</b> where you use the keyboard to <b>interact with and court</b> various cryptids! <b>Make friends</b> as the new kid in town, and maybe <b>find a partner</b> along the way? Featuring <b>preferred pronoun selection</b>, <b>branching dialogue trees</b>, and other <b>player-influenced mechanics</b>!</p>
 					<!--<a href=https://globalgamejam.org/2019/games/sleepy-jeoff>
-						<img src="Images/GGJLogo.png" style="width:20%" onclick="onClick(this)" class="center" alt="GGJLogo">
-						<h3 class="w3-center">Click here to download from itch.io!</h3>
-					</a>-->
+						<img src="Images/GGJLogo.png" style="width:20%" onclick="onClick(this)" class="center" alt="GGJLogo">-->
+						<h3 class="w3-center">Download link coming soon!</h3>
+					<!--</a>-->
 				</div>
 			</div>
 			<!-- Second Row -->
