--- a/contact.html
+++ b/contact.html
@@ -10,62 +10,60 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css%22%3E">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js%22%3E"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js%22%3E"> </script>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 </head>
 <body class="w3-light-blue">
 	<!-- Sidebar/menu -->
 	<nav class="w3-sidebar w3-bar-block w3-light-blue w3-animate-right w3-top w3-text-light-grey w3-large" style="z-index:3;width:250px;font-weight:bold;display:none;right:0;" id="mySidebar">
-	  <a href="javascript:void()" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">CLOSE SIDEBAR</a> 
-	  <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">HOME</a> 
-	  <a href="about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">ABOUT ME</a> 
-	  <a href="resume.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">RESUME</a>
-	  <a href="contact.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">CONTACT</a>
+		<a href="javascript:void()" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">CLOSE SIDEBAR</a> 
+		<a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">HOME</a> 
+		<a href="about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">ABOUT ME</a> 
+		<a href="resume.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">RESUME</a>
+		<a href="contact.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">CONTACT</a>
 	</nav>
 
 	<!-- Top menu on small screens -->
 	<header class="w3-container w3-top w3-blue w3-xlarge w3-padding-16">
-	  <span class="w3-left w3-padding">LIAM CRISTELLO</span>
-	  <a href="javascript:void(0)" class="w3-right w3-button w3-blue" onclick="w3_open()">☰</a>
+		<span class="w3-left w3-padding">LIAM CRISTELLO</span>
+		<a href="javascript:void(0)" class="w3-right w3-button w3-blue" onclick="w3_open()">☰</a>
 	</header>
 
 	<!-- Overlay effect when opening sidebar on small screens -->
 	<div class="w3-overlay w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
 	<!-- Contact section -->
-	  <div class="w3-container w3-indigo w3-padding-32 w3-padding-large" id="contact">
-	    <div class="w3-content" style="max-width:1920px">
-	      <h4 class="w3-center"><b>Contact Me</b></h4>
-	      <p>Want to reach out? Feel free to contact me!</p>
-	      <form action="/action_page.php" target="_blank">
-	        <div class="w3-section">
-	          <label>Name</label>
-	          <input class="w3-input w3-border" type="text" name="Name" required>
-	        </div>
-	        <div class="w3-section">
-	          <label>Email</label>
-	          <input class="w3-input w3-border" type="text" name="Email" required>
-	        </div>
-	        <div class="w3-section">
-	          <label>Message</label>
-	          <input class="w3-input w3-border" type="text" name="Message" required>
-	        </div>
-	        <button type="submit" class="w3-button w3-block w3-black w3-margin-bottom">Send Message</button>
-	      </form>
+	<div class="w3-container w3-padding-32 w3-padding-large w3-text-black" id="contact">
+		<div class="w3-content" style="max-width:1920px; margin-top: 64px">
+	    	<h2 class="contact w3-center"><b>CONTACT ME</b></h2>
+	    	<h3 class="contact w3-center">Want to reach out? Feel free to contact me!</h3>
+	    	<div class="w3-row w3-center">
+	    		<!-- Twitter -->
+	    		<a target="_blank" href="https://twitter.com/LiamCristello" class="fab fa-twitter" style="color:#FFFFFF; text-decoration: none; font-size: 60px; margin: 10px"></a>
+	    		<!-- Email -->
+	    		<a href="mailto:liamcristello@gmail.com" class="fas fa-envelope" target="_blank" style="color: #FFFFFF; text-decoration: none; font-size: 60px; margin: 10px"></a>
+	    		<!-- LinkedIn -->
+	    		<a target="_blank" href="https://www.linkedin.com/in/liamcristello/" class="fab fa-linkedin-in" style="color: #FFFFFF; text-decoration: none; font-size: 60px; margin: 10px"></a>
+	    	</div>
+	    	<h3 class="contact w3-center">You can also check out other work of mine on GitHub!</h3>
+	    	<div class="w3-row">
+	    		
+	    	</div>
 	    </div>
-	  </div>
+	</div>
 
 
-	  <!--Sidebar script-->
-	  <script>
-	  // Script to open and close sidebar
-	  function w3_open() {
-	    document.getElementById("mySidebar").style.display = "block";
-	    document.getElementById("myOverlay").style.display = "block";
-	  }
+	<!--Sidebar script-->
+	<script>
+	// Script to open and close sidebar
+	function w3_open() {
+		document.getElementById("mySidebar").style.display = "block";
+		document.getElementById("myOverlay").style.display = "block";
+	}
 
-	  function w3_close() {
-	    document.getElementById("mySidebar").style.display = "none";
+	function w3_close() {
+		document.getElementById("mySidebar").style.display = "none";
 	    document.getElementById("myOverlay").style.display = "none";
-	  }
+	}
 	</script>
 
 </body>
