--- a/index.html
+++ b/index.html
@@ -32,10 +32,16 @@
 
 	<!-- !PAGE CONTENT! -->
 	<div class="w3-main w3-content" style="max-width:1920px;margin-top:84px">
+		<!--<div class="w3-row-padding">
+        	<h3 class="w3-center">Welcome to my website!</h3>
+	        <p class="w3-center"><b>Click on any of the pictures above</b> to learn more about the project and <b>what I contributed</b> to it. Some even have <b>download links!</b></p>
+	        <p class="w3-center">You can also <b>use the sidebar</b> to navigate to different parts of this website, including a page <a href="about.html">about me</a>, my <a href="resume.html">resume</a>, and details on <a href="contact.html">how to contact me</a>. I look forward to working with you!</p>
+	    </div>-->
 		<div class="w3-row">
 			<h1 class="index-main w3-center"><b>PROJECTS</b></h1>
+			<!--<div class="w3-section w3-bottombar w3-border-blue"></div>-->
 		</div>
-		<!--<div class="w3-row">
+		<div class="w3-row">
 			<div class="w3-third w3-padding"></div>
 			<div class="w3-third w3-padding">
 				<div class="">
@@ -47,8 +53,11 @@
 				</div>
 			</div>
 			<div class="w3-third w3-padding"></div>
-		</div>-->
+		</div>
 		<div class="w3-row">
+			<div class="w3-col m2 w3-center w3-padding">
+		    	<p></p>
+			</div>
 			<div class="w3-third w3-padding">
 				<div class="">
 					<a href=bird-brigade.html>
@@ -60,21 +69,15 @@
 			</div>
 			<div class="w3-third w3-padding">
 				<div class="">
-					<a href=sleepy-jeoff.html>
-						<img src="Images/SleepyJeoffLogo.png" style="width:100%" alt="SleepyJeoff">
-						<h3 class="w3-center">Sleepy Jeoff</h3>
-						<p class="w3-center">Programming, Asset Integration, Game Design</p>
-					</a>
-				</div>
-			</div>
-			<div class="w3-third w3-padding">
-				<div class="">
 					<a href=spooky-cryptid-dating.html>
 						<img src="Images/SpookyCryptidDatingTitle.png" style="width:100%" class= "w3-center" alt="SpookyCryptidDating">
 						<h3 class="w3-center">Spooky Cryptid Dating</h3>
 						<p class="w3-center">Programming, Asset Integration</p>
 					</a>
 				</div>
+			</div>
+			<div class="w3-col m2 w3-center w3-padding">
+		    	<p></p>
 			</div>
 		</div>
 		<div class="w3-row">
