--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,6 @@
 	<!-- Top menu on small screens -->
 	<header class="w3-container w3-top w3-blue w3-xlarge w3-padding-16">
 		<span class="w3-left w3-padding">LIAM CRISTELLO</span>
-		<img src="Images/SleepyJeoffLogo.png" style="width: 7%">
 		<a href="javascript:void(0)" class="w3-right w3-button w3-blue" onclick="w3_open()">☰</a>
 	</header>
 
@@ -36,12 +35,13 @@
 	<div class="w3-container w3-padding-32 w3-padding-large w3-text-black" id="contact">
 		<div class="w3-content" style="max-width:1920px; margin-top: 64px">
 	    	<h2 class="contact w3-center"><b>CONTACT ME</b></h2>
+	    	<div class="w3-section w3-bottombar w3-border-blue"></div>
 	    	<h3 class="contact w3-center">Want to reach out? Feel free to contact me!</h3>
 	    	<div class="w3-row w3-center">
 	    		<!-- Twitter -->
-	    		<a target="_blank" href="https://twitter.com/LiamCristello" class="fab fa-twitter" style="color:#FFFFFF; text-decoration: none; font-size: 60px; margin: 10px"></a>
+	    		<a target="_blank" href="https://twitter.com/LiamCristello" class="fab fa-twitter" style="color:#FFFFFF; text-decoration: none; font-size: 60px"></a>
 	    		<!-- Email -->
-	    		<a href="mailto:liamcristello@gmail.com" class="fas fa-envelope" target="_blank" style="color: #FFFFFF; text-decoration: none; font-size: 60px; margin: 10px"></a>
+	    		<a href="mailto:liamcristello@gmail.com" class="fas fa-envelope" target="_blank" style="color: #FFFFFF; text-decoration: none; font-size: 60px; margin: 5px"></a>
 	    		<!-- LinkedIn -->
 	    		<a target="_blank" href="https://www.linkedin.com/in/liamcristello/" class="fab fa-linkedin-in" style="color: #FFFFFF; text-decoration: none; font-size: 60px; margin: 10px"></a>
 	    	</div>
