--- a/index.html
+++ b/index.html
@@ -37,13 +37,15 @@
 	        <p class="w3-center"><b>Click on any of the pictures above</b> to learn more about the project and <b>what I contributed</b> to it. Some even have <b>download links!</b></p>
 	        <p class="w3-center">You can also <b>use the sidebar</b> to navigate to different parts of this website, including a page <a href="about.html">about me</a>, my <a href="resume.html">resume</a>, and details on <a href="contact.html">how to contact me</a>. I look forward to working with you!</p>
 	    </div>-->
-		<div class="w3-row">
+		<div class="w3-row w3-padding">
 			<h1 class="index-main w3-center"><b>PROJECTS</b></h1>
-			<!--<div class="w3-section w3-bottombar w3-border-blue"></div>-->
+			<div class="w3-section w3-bottombar w3-border-blue"></div>
 		</div>
 		<div class="w3-row">
-			<div class="w3-third w3-padding"></div>
-			<div class="w3-third w3-padding">
+			<div class="w3-col m3 w3-center w3-padding">
+				<p></p>
+			</div>
+			<div class="w3-col m6 w3-center w3-padding">
 				<div class="">
 					<a href=sleepy-jeoff.html>
 						<img src="Images/SleepyJeoffLogo.png" style="width:100%" alt="SleepyJeoff">
@@ -52,13 +54,15 @@
 					</a>
 				</div>
 			</div>
-			<div class="w3-third w3-padding"></div>
+			<div class="w3-col m3 w3-center w3-padding">
+				<p></p>
+			</div>
 		</div>
 		<div class="w3-row">
-			<div class="w3-col m2 w3-center w3-padding">
+			<!--<div class="w3-col m2 w3-center w3-padding">
 		    	<p></p>
-			</div>
-			<div class="w3-third w3-padding">
+			</div>-->
+			<div class="w3-half w3-padding">
 				<div class="">
 					<a href=bird-brigade.html>
 						<img src="Images/BirdBrigadeLogo.png" style="width:100%" alt="BirdBrigade">
@@ -67,7 +71,7 @@
 					</a>
 				</div>
 			</div>
-			<div class="w3-third w3-padding">
+			<div class="w3-half w3-padding">
 				<div class="">
 					<a href=spooky-cryptid-dating.html>
 						<img src="Images/SpookyCryptidDatingTitle.png" style="width:100%" class= "w3-center" alt="SpookyCryptidDating">
@@ -76,15 +80,15 @@
 					</a>
 				</div>
 			</div>
-			<div class="w3-col m2 w3-center w3-padding">
+			<!--<div class="w3-col m2 w3-center w3-padding">
 		    	<p></p>
-			</div>
+			</div>-->
 		</div>
 		<div class="w3-row">
-			<div class="w3-col m2 w3-center w3-padding">
+			<!--<div class="w3-col m2 w3-center w3-padding">
 		    	<p></p>
-			</div>
-	    	<div class="w3-col m4 w3-center w3-padding">
+			</div>-->
+	    	<div class="w3-half w3-center w3-padding">
 	    		<a href=throw-at-target.html>
 					<img src="Images/Placeholder.png" style="width:100%" alt="Placeholder">
 					<h3 class="w3-center">Throw At Target</h3>
@@ -92,7 +96,7 @@
 					<p class="w3-center">Co-op/Internship Work</p>
 				</a>
 	    	</div>
-	    	<div class="w3-col m4 w3-center w3-padding">
+	    	<div class="w3-half w3-center w3-padding">
 	      		<a href=pong-and-obstacles.html>
 					<img src="Images/Placeholder.png" style="width:100%" alt="Placeholder">
 					<h3 class="w3-center">Pong & Obstacles</h3>
@@ -100,9 +104,9 @@
 					<p class="w3-center">Co-op/Internship Work</p>
 				</a>
 	    	</div>
-	    	<div class="w3-col m2 w3-center w3-padding">
+	    	<!--<div class="w3-col m2 w3-center w3-padding">
 	    		<p></p>
-	    	</div>
+	    	</div>-->
 		</div>
 
 		<!-- Footer -->
