Index Change Again, Contact also has Github

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
         </p>
         <p class="about1">Programming is the discipline I have the most practice in. I've worked the most with Unity, but have also done some work with Ren'Py and the Unreal Engine 4. Many of my projects were made at game jams, which are brief events, usually about 48 hours, in which you form a team and try to make as polished of a game as you can. I find these to be really fun challenges that force me to get creative and let me practice my teamwork and communication skills, as I often work with people I've just met.
         </p>
-        <p class="about1">In my free time, I also love music. I play piano, guitar, and trumpet, the last of which I play in Northeastern University's Pep Band! I've done some music and audio engineering work for games before, and am always looking to get more experience!
+        <p class="about1">In my free time, I also love music. I play piano, guitar, and trumpet. At Northeastern, I play trumpet in the Pep Band, and am pursuing a Music Technology minor! I've done some music and audio engineering work for games before, and am always looking to get more experience!
         </p>
       </div>
     </div> 
