--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 	    </div>-->
 		<div class="w3-row w3-padding">
 			<h1 class="index-main w3-center"><b>PROJECTS</b></h1>
+			<p class="w3-center" style="font-size: 20px"><b>Click on any of the pictures below</b> to learn more about the project and <b>what I contributed</b> to it. Some even have <b>download links!</b></p>
 			<div class="w3-section w3-bottombar w3-border-blue"></div>
 		</div>
 		<div class="w3-row">
@@ -112,9 +113,7 @@
 		<!-- Footer -->
 		<footer class="w3-container w3-padding-32 w3-indigo">  
 			<div class="w3-row-padding">
-	        	<h3 class="w3-center">Welcome to my website!</h3>
-		        <p class="w3-center"><b>Click on any of the pictures above</b> to learn more about the project and <b>what I contributed</b> to it. Some even have <b>download links!</b></p>
-		        <p class="w3-center">You can also <b>use the sidebar</b> to navigate to different parts of this website, including a page <a href="about.html">about me</a>, my <a href="resume.html">resume</a>, and details on <a href="contact.html">how to contact me</a>. I look forward to working with you!</p>
+	        	<p>Placeholder</p>
 		    </div>
 		</footer>
 
