--- a/contact.html
+++ b/contact.html
@@ -34,10 +34,10 @@
 	<!-- Contact section -->
 	<div class="w3-container w3-padding-32 w3-padding-large w3-text-black" id="contact">
 		<div class="w3-content" style="max-width:1920px; margin-top: 64px">
-	    	<h2 class="contact w3-center"><b>CONTACT ME</b></h2>
+	    	<h2 class="contact w3-center"><b>CONTACT</b></h2>
 	    	<div class="w3-section w3-bottombar w3-border-blue"></div>
 	    	<h3 class="contact w3-center">Want to reach out? Feel free to contact me!</h3>
-	    	<div class="w3-row w3-center">
+	    	<div class="w3-row w3-center w3-padding">
 	    		<!-- Twitter -->
 	    		<a target="_blank" href="https://twitter.com/LiamCristello" class="fab fa-twitter" style="color:#FFFFFF; text-decoration: none; font-size: 60px"></a>
 	    		<!-- Email -->
@@ -46,8 +46,9 @@
 	    		<a target="_blank" href="https://www.linkedin.com/in/liamcristello/" class="fab fa-linkedin-in" style="color: #FFFFFF; text-decoration: none; font-size: 60px; margin: 10px"></a>
 	    	</div>
 	    	<h3 class="contact w3-center">You can also check out other work of mine on GitHub!</h3>
-	    	<div class="w3-row">
-	    		
+	    	<!--GitHub-->
+	    	<div class="w3-row w3-center w3-padding">
+            <a target="_blank" href="https://github.com/liamcristello" target="_blank" class="fab fa-github-square" style="color: #FFFFFF; text-decoration: none; font-size: 60px; margin: 10px" ></a>
 	    	</div>
 	    </div>
 	</div>
