--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 	    	<h3 class="contact w3-center">You can also check out other work of mine on GitHub!</h3>
 	    	<!--GitHub-->
 	    	<div class="w3-row w3-center w3-padding">
-            <a target="_blank" href="https://github.com/liamcristello" target="_blank" class="fab fa-github-square" style="color: #FFFFFF; text-decoration: none; font-size: 60px; margin: 10px" ></a>
+            <a target="_blank" href="https://github.com/liamcristello" target="_blank" class="fab fa-github-square" style="color: #FFFFFF; text-decoration: none; font-size: 60px" ></a>
 	    	</div>
 	    </div>
 	</div>
