--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
 	        	<!-- Twitter -->
 	    		<a target="_blank" href="https://twitter.com/LiamCristello" class="fab fa-twitter" style="color:#FFFFFF; text-decoration: none; font-size: 60px"></a>
 	    		<!-- Email -->
-	    		<a href="mailto:liamcristello@gmail.com" class="fas fa-envelope" target="_blank" style="color: #FFFFFF; text-decoration: none; font-size: 60px; margin: 5px"></a>
+	    		<a href="mailto:liamcristello@gmail.com" class="fas fa-envelope" target="_blank" style="color: #FFFFFF; text-decoration: none; font-size: 60px; margin: 7px"></a>
 	    		<!-- LinkedIn -->
-	    		<a target="_blank" href="https://www.linkedin.com/in/liamcristello/" class="fab fa-linkedin-in" style="color: #FFFFFF; text-decoration: none; font-size: 60px; margin: 10px"></a>
+	    		<a target="_blank" href="https://www.linkedin.com/in/liamcristello/" class="fab fa-linkedin-in" style="color: #FFFFFF; text-decoration: none; font-size: 60px; margin: 7px"></a>
 	    		<!-- GitHub -->
-	    		<a target="_blank" href="https://github.com/liamcristello" target="_blank" class="fab fa-github-square" style="color: #FFFFFF; text-decoration: none; font-size: 60px;" ></a>
+	    		<a target="_blank" href="https://github.com/liamcristello" target="_blank" class="fab fa-github-square" style="color: #FFFFFF; text-decoration: none; font-size: 60px; margin: 7px" ></a>
 		    </div>
 		</footer>
 
