Added footer to all pages
Contact does not need bar, need to update email function

--- a/about.html
+++ b/about.html
@@ -46,7 +46,20 @@
         <p class="about1">In my free time, I also love music. I play piano, guitar, and trumpet. At Northeastern, I play trumpet in the Pep Band, and am pursuing a Music Technology minor! I've done some music and audio engineering work for games before, and am always looking to get more experience!
         </p>
       </div>
-    </div> 
+    </div>
+    <!-- Footer -->
+    <footer class="w3-container w3-padding-32 w3-indigo">  
+      <div class="w3-row w3-center w3-padding">
+        <!-- Twitter -->
+        <a target="_blank" href="https://twitter.com/LiamCristello" class="fab fa-twitter" style="color:#FFFFFF; text-decoration: none; font-size: 60px"></a>
+        <!-- Email -->
+        <a href="mailto:liamcristello@gmail.com" class="fas fa-envelope" target="_blank" style="color: #FFFFFF; text-decoration: none; font-size: 60px; margin: 7px"></a>
+        <!-- LinkedIn -->
+        <a target="_blank" href="https://www.linkedin.com/in/liamcristello/" class="fab fa-linkedin-in" style="color: #FFFFFF; text-decoration: none; font-size: 60px; margin: 7px"></a>
+        <!-- GitHub -->
+        <a target="_blank" href="https://github.com/liamcristello" target="_blank" class="fab fa-github-square" style="color: #FFFFFF; text-decoration: none; font-size: 60px; margin: 7px" ></a>
+      </div>
+    </footer>
     <div class="w3-light-grey w3-center w3-padding-24">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></div>
   </div>
 
