--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 	<!-- Overlay effect when opening sidebar on small screens -->
 	<div class="w3-overlay w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
-	<!-- Contact section -->
+	<!-- PAGE CONTENT -->
 	<div class="w3-container w3-padding-32 w3-padding-large w3-text-black" id="contact">
 		<div class="w3-content" style="max-width:1920px; margin-top: 64px">
 	    	<h2 class="contact w3-center"><b>CONTACT</b></h2>
@@ -52,6 +52,8 @@
 	    	</div>
 	    </div>
 	</div>
+    <!-- Footer -->
+    <div class="w3-light-grey w3-center w3-padding-24 w3-bottom">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></div>
 
 
 	<!--Sidebar script-->
