--- a/resume.html
+++ b/resume.html
@@ -48,10 +48,20 @@
 	      	<iframe src="https://github.com/liamcristello/liamcristello.github.io/blob/master/PDF/Liam_Cristello_Resume.pdf&embedded=true" frameborder="0" width="100%" height="100%"></iframe>
 	    </object>
 
-		<footer class="w3-container w3-center">
-
-		</footer>
-		<div class="w3-light-grey w3-center w3-padding-24">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></div>
+		<!-- Footer -->
+	    <footer class="w3-container w3-padding-32 w3-indigo">  
+     		<div class="w3-row w3-center w3-padding">
+		        <!-- Twitter -->
+		        <a target="_blank" href="https://twitter.com/LiamCristello" class="fab fa-twitter" style="color:#FFFFFF; text-decoration: none; font-size: 60px"></a>
+		        <!-- Email -->
+		        <a href="mailto:liamcristello@gmail.com" class="fas fa-envelope" target="_blank" style="color: #FFFFFF; text-decoration: none; font-size: 60px; margin: 7px"></a>
+		        <!-- LinkedIn -->
+		        <a target="_blank" href="https://www.linkedin.com/in/liamcristello/" class="fab fa-linkedin-in" style="color: #FFFFFF; text-decoration: none; font-size: 60px; margin: 7px"></a>
+		        <!-- GitHub -->
+		        <a target="_blank" href="https://github.com/liamcristello" target="_blank" class="fab fa-github-square" style="color: #FFFFFF; text-decoration: none; font-size: 60px; margin: 7px" ></a>
+      		</div>
+	    </footer>
+	    <div class="w3-light-grey w3-center w3-padding-24">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></div>
 	</div>
 
 	<!--Sidebar script-->
