--- a/bird-brigade.html
+++ b/bird-brigade.html
@@ -82,10 +82,10 @@
 			</div>
 			<!-- Misc. pics of game -->
 			<div class="w3-row w3-margin-top">
-				<div class="w3-half w3-padding">
+				<div class="w3-half w3-center w3-padding">
 					<img src="GIFS/BirdBrigadeGif2.gif" style="width:100%" class="center" alt="BirdBrigade">
 				</div>
-				<div class="w3-half w3-padding">
+				<div class="w3-half w3-center w3-padding">
 					<img src="GIFs/BirdBrigadeGif3.gif" style="width:100%" class="center" alt="BirdBrigade">
 				</div>
 			</div>
