--- a/pong-and-obstacles.html
+++ b/pong-and-obstacles.html
@@ -80,10 +80,10 @@
 			</div>
 			<!-- Misc. pics of game -->
 			<div class="w3-row w3-margin-top">
-				<div class="w3-half w3-padding">
+				<div class="w3-half w3-center w3-padding">
 					<img src="Images/Placeholder.png" style="width:100%" class="center" alt="Placeholder">
 				</div>
-				<div class="w3-half w3-padding">
+				<div class="w3-half w3-center w3-padding">
 					<img src="Images/Placeholder.png" style="width:100%" class="center" alt="Placeholder">
 				</div>
 			</div>
