--- a/sleepy-jeoff.html
+++ b/sleepy-jeoff.html
@@ -83,10 +83,10 @@
 			</div>
 			<!-- Misc. pics of game -->
 			<div class="w3-row w3-margin-top">
-				<div class="w3-half w3-padding">
+				<div class="w3-half w3-center w3-padding">
 					<img src="Images/SleepyJeoffPic1.png" style="width:100%" class="center" alt="SleepyJeoff">
 				</div>
-				<div class="w3-half w3-padding">
+				<div class="w3-half w3-center w3-padding">
 					<img src="Images/SleepyJeoffPic2.png" style="width:100%" class="center" alt="SleepyJeoff">
 				</div>
 			</div>
