--- a/spooky-cryptid-dating.html
+++ b/spooky-cryptid-dating.html
@@ -46,10 +46,9 @@
 				<div class="w3-content w3-half w3-justify" style="max-width:1000px; margin: auto">
 					<h1 class="w3-center project-page-about">About The Game</h1>
 					<p class="w3-center w3-padding project-page-about">A <b>2D visual-novel</b> where you use the keyboard to <b>interact with and court</b> various cryptids! <b>Make friends</b> as the new kid in town, and maybe <b>find a partner</b> along the way? Featuring <b>preferred pronoun selection</b>, <b>branching dialogue trees</b>, and other <b>player-influenced mechanics</b>!</p>
-					<!--<a href=https://globalgamejam.org/2019/games/sleepy-jeoff>
-						<img src="Images/GGJLogo.png" style="width:20%" onclick="onClick(this)" class="center" alt="GGJLogo">-->
-						<h3 class="w3-center">Download link coming soon!</h3>
-					<!--</a>-->
+					<div class="w3-center">
+						<iframe frameborder="0" src="https://itch.io/embed/512759?border_width=2&amp;bg_color=88CEEB" width="554" height="169"></iframe>
+					</div>
 				</div>
 			</div>
 			<!-- Second Row -->
