Basic Pictures for Co-op Games
ThrowAtTarget and PongAndObstacles

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			</div>-->
 	    	<div class="w3-half w3-center w3-padding">
 	    		<a href=throw-at-target.html>
-					<img src="Images/Placeholder.png" style="width:100%" alt="Placeholder">
+					<img src="Images/ThrowAtTargetPic2.png" style="width:100%" alt="ThrowAtTarget">
 					<h3 class="w3-center">Throw At Target</h3>
 					<h4 class="w3-center">[IN PROGRESS]</h4>
 					<p class="w3-center">Co-op/Internship Work</p>
@@ -100,7 +100,7 @@
 	    	</div>
 	    	<div class="w3-half w3-center w3-padding">
 	      		<a href=pong-and-obstacles.html>
-					<img src="Images/Placeholder.png" style="width:100%" alt="Placeholder">
+					<img src="Images/PongAndObstaclesPic1.png" style="width:100%" alt="PongAndObstacles">
 					<h3 class="w3-center">Pong & Obstacles</h3>
 					<h4 class="w3-center">[IN PROGRESS]</h4>
 					<p class="w3-center">Co-op/Internship Work</p>
