--- a/pong-and-obstacles.html
+++ b/pong-and-obstacles.html
@@ -40,7 +40,7 @@
 			<div class="w3-row">
 				<!-- Video/Logo -->
 				<div class="w3-half w3-center">
-					<img src="Images/Placeholder.png" alt="Placeholder" style="width:100%">
+					<img src="Images/PongAndObstaclesPic1.png" alt="PongAndObstacles" style="width:100%">
 				</div>
 				<!-- About The Game -->
 				<div class="w3-content w3-half w3-justify" style="max-width:1000px; margin: auto">
@@ -81,10 +81,10 @@
 			<!-- Misc. pics of game -->
 			<div class="w3-row w3-margin-top">
 				<div class="w3-half w3-center w3-padding">
-					<img src="Images/Placeholder.png" style="width:100%" class="center" alt="Placeholder">
+					<img src="Images/PongAndObstaclesPic2.png" style="width:100%" class="center" alt="PongAndObstacles">
 				</div>
 				<div class="w3-half w3-center w3-padding">
-					<img src="Images/Placeholder.png" style="width:100%" class="center" alt="Placeholder">
+					<img src="Images/PongAndObstaclesPic3.png" style="width:100%" class="center" alt="PongAndObstacles">
 				</div>
 			</div>
 		</div>
