--- a/bird-brigade.html
+++ b/bird-brigade.html
@@ -40,7 +40,7 @@
 			<div class="w3-row">
 				<!-- Video/Logo -->
 				<div class="w3-content w3-half">
-					<img src="GIFs/BirdBrigadeGif1.gif" alt="BirdBrigade" style="width: 100%">
+					<img src="GIFs/BirdBrigadeGif1.png" alt="BirdBrigade" style="width: 100%">
 				</div>
 				<!-- About The Game -->
 				<div class="w3-content w3-half w3-justify" style="max-width:1000px; margin: auto">
@@ -83,10 +83,10 @@
 			<!-- Misc. pics of game -->
 			<div class="w3-row w3-margin-top">
 				<div class="w3-half w3-center w3-padding">
-					<img src="GIFs/BirdBrigadeGif2.gif" style="width:100%" class="center" alt="BirdBrigade">
+					<img src="GIFs/BirdBrigadeGif2.png" style="width:100%" class="center" alt="BirdBrigade">
 				</div>
 				<div class="w3-half w3-center w3-padding">
-					<img src="GIFs/BirdBrigadeGif3.gif" style="width:100%" class="center" alt="BirdBrigade">
+					<img src="GIFs/BirdBrigadeGif3.png" style="width:100%" class="center" alt="BirdBrigade">
 				</div>
 			</div>
 		</div>
