--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
 			</div>-->
 			<div class="w3-half w3-padding">
 				<div class="">
-					<a href=bird-brigade.html>
-						<img src="Images/BirdBrigadeLogo.png" style="width:100%" alt="BirdBrigade">
-						<h3 class="w3-center">Bird Brigade</h3>
-						<p class="w3-center">UI/UX Design, Programming, Playtest Administration</p>
+					<a href=computer-cat.html>
+						<img src="Images/ComputerCatMainMenu.png" style="width:100%" alt="ComputerCat">
+						<h3 class="w3-center">Computer Cat</h3>
+						<p class="w3-center">Enemy Design/AI, Gameplay Programming, Asset Integration</p>
 					</a>
 				</div>
 			</div>
 			<div class="w3-half w3-padding">
 				<div class="">
-					<a href=spooky-cryptid-dating.html>
-						<img src="Images/SpookyCryptidDatingTitle.png" style="width:100%" class= "w3-center" alt="SpookyCryptidDating">
-						<h3 class="w3-center">Spooky Cryptid Dating</h3>
-						<p class="w3-center">Programming, Asset Integration</p>
+					<a href=sleepy-jeoff.html>
+						<img src="Images/SleepyJeoffLogo.png" style="width:100%" alt="SleepyJeoff">
+						<h3 class="w3-center">Sleepy Jeoff</h3>
+						<p class="w3-center">Programming, Asset Integration, Game Design</p>
 					</a>
 				</div>
 			</div>
@@ -93,18 +93,18 @@
 	    	<div class="w3-half w3-center w3-padding">
 	    		<a href=throw-at-target.html>
 					<img src="Images/ThrowAtTargetPic2.png" style="width:100%" alt="ThrowAtTarget">
-					<h3 class="w3-center">Throw At Target</h3>
-					<h4 class="w3-center">[IN PROGRESS]</h4>
+					<h3 class="w3-center">VR Physical Therapy Study</h3>
 					<p class="w3-center">Co-op/Internship Work</p>
 				</a>
 	    	</div>
 	    	<div class="w3-half w3-center w3-padding">
-	      		<a href=pong-and-obstacles.html>
-					<img src="Images/PongAndObstaclesPic1.png" style="width:100%" alt="PongAndObstacles">
-					<h3 class="w3-center">Pong & Obstacles</h3>
-					<h4 class="w3-center">[IN PROGRESS]</h4>
-					<p class="w3-center">Co-op/Internship Work</p>
-				</a>
+	      		<div class="">
+					<a href=bird-brigade.html>
+						<img src="Images/BirdBrigadeLogo.png" style="width:100%" alt="BirdBrigade">
+						<h3 class="w3-center">Bird Brigade</h3>
+						<p class="w3-center">UI/UX Design, Programming, Playtest Administration</p>
+					</a>
+				</div>
 	    	</div>
 	    	<!--<div class="w3-col m2 w3-center w3-padding">
 	    		<p></p>
