--- a/about.html
+++ b/about.html
@@ -39,11 +39,11 @@
       <img style="display: block" src="Images/Liam.png" alt="Me" class="w3-image w3-half w3-center w3-padding-32" width="80%" height="80%">
       <div class="w3-content w3-half w3-justify w3-padding-32" style="max-width:1000px; margin: auto">
         <h1 class="w3-center"> Hi there!</h1>
-        <p class="about1">My name's Liam. I'm currently studying as a Computer Science & Game Development major at Northeastern University. I'm studying to make video games, and you can find some of my projects on the portfolio page of this website! Some were made as coursework projects, and others were made as side projects in my free time. I'm an active member of Northeastern University's Game Development Club, and am always looking for new projects to work on!
+        <p class="about1">My name's Liam. I'm currently studying as a Computer Science & Game Development major at Northeastern University, set to graduate in May 2021. I'm studying to make video games, and you can find some of my projects on the portfolio page of this website! Some were made as coursework projects, and others were made as side projects in my free time. I'm an active member of Northeastern University's Game Development Club, and am always looking for new projects to work on!
         </p>
         <p class="about1">Programming is the discipline I have the most practice in. I've worked the most with Unity, but have also done some work with Ren'Py and the Unreal Engine 4. Many of my projects were made at game jams, which are brief events, usually about 48 hours, in which you form a team and try to make as polished of a game as you can. I find these to be really fun challenges that force me to get creative and let me practice my teamwork and communication skills, as I often work with people I've just met.
         </p>
-        <p class="about1">In my free time, I also love music. I play piano, guitar, and trumpet. At Northeastern, I play trumpet in the Pep Band, and am pursuing a Music Technology minor! I've done some music and audio engineering work for games before, and am always looking to get more experience!
+        <p class="about1">In my free time, I also love music. I play piano, guitar, and trumpet. At Northeastern, I play trumpet in the Pep Band, and am pursuing a Minor in Music Technology!
         </p>
       </div>
     </div>
