--- a/road-trip.html
+++ b/road-trip.html
@@ -35,18 +35,23 @@
 	<div class="w3-main w3-content" style="max-width:1920px; margin-top:64px">
 		<div class="w3-container w3-center w3-margin-top w3-text-black w3-padding-32">
 			<!-- TITLE -->
-			<h1 class="project-page-heading" style="margin-bottom: 20px"><b>THROW AT TARGET</b></h1>
+			<h1 class="project-page-heading" style="margin-bottom: 20px"><b>SLEEPY JEOFF</b></h1>
 			<!-- First Row -->
 			<div class="w3-row">
 				<!-- Video/Logo -->
-				<div class="w3-half w3-center">
-					<img src="Images/ThrowAtTargetPic2.png" alt="ThrowAtTarget" style="width:100%">
+				<div class="w3-half">
+					<div class="video-responsive">
+						<div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/x5cvid" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
+					</div>
 				</div>
 				<!-- About The Game -->
 				<div class="w3-content w3-half w3-justify" style="max-width:1000px; margin: auto">
 					<h1 class="w3-center project-page-about">About The Game</h1>
-					<p class="w3-center w3-padding project-page-about">A <b>3D Virtual Reality game</b> for use with <b>the Oculus Quest</b>, developed on the <b>Oculus Rift</b> during my <b>co-op internship at Northeastern's ReGame-VR Lab</b>. Pick up and throw objects in <b>real-world space</b> and throw them into <b>varying targets</b> as you travel between <b>different environments</b>! Features <b>calibration options</b> for players of <b>different heights</b>, players with differing <b>dominant hand</b>, and also different <b>progression options!</b></p>
-					<p class="w3-center w3-padding project-page-about">Unfortunately, because this is a <b>research game</b> designed for in-house use, I cannot provide a download link.</p>
+					<p class="w3-center w3-padding project-page-about">A <b>3D atmospheric adventure game</b> where you <b>use the mouse</b> to drive across the country and <b>solve a mystery</b>. Use objects to <b>affect Jeoff's path</b> to guide him back to his bed! The objects can also be used to <b>deflect enemies</b> like Jeoff's cat, dog, and vacuum cleaner.</p>
+					<a href=https://globalgamejam.org/2019/games/sleepy-jeoff>
+						<img src="Images/GGJLogo.png" style="width:20%" onclick="onClick(this)" class="center" alt="GGJLogo">
+						<h3 class="w3-center">Click here to download from the GGJ website!</h3>
+					</a>
 				</div>
 			</div>
 			<!-- Second Row -->
@@ -54,9 +59,9 @@
 				<!-- Role(s) -->
 				<div class="w3-third">
 					<h2 class="project-page-heading">Roles</h2>
-					<p class="w3-center project-page-about">Programming</p>
-					<p class="w3-center project-page-about">VR Integration</p>
+					<p class="w3-center project-page-about">Systems Programming</p>
 					<p class="w3-center project-page-about">Game Design</p>
+					<p class="w3-center project-page-about">UI/UX Integration</p>
 				</div>
 				<!-- Engine -->
 				<div class="w3-third">
@@ -66,25 +71,23 @@
 				<!-- Contribution(s) -->
 				<div class="w3-third">
 					<h2 class="project-page-heading">Contributions</h2>
-					<p class="w3-center project-page-about">Scripted objects to interact with VR controllers and emulate real-world physics</p>
-					<p class="w3-center project-page-about">Programmed calibration scene to adjust game for players of different heights</p>
-					<p class="w3-center project-page-about">Sought out and implemented art and sound assets</p>
-					<p class="w3-center project-page-about">Conducted tests with third-party users and iterated on feedback</p>
-					<p class="w3-center project-page-about">Optimized game to export to Oculus Quest VR headset</p>
+					<p class="w3-center project-page-about">Scripted player input to use mouse-clicks to interact with a computer-controlled character through items in scene</p>
+					<p class="w3-center project-page-about">Scripted enemy controller AI for various enemy types</p>
+					<p class="w3-center project-page-about">Integrated art and sound assets</p>
 				</div>
 			</div>
 			<!-- About the Process -->
 			<div class="w3-row w3-margin-top">
 				<h1 class="project-page-about">About The Process</h1>
-				<p class="project-page-about-process">This is a project I worked on for <b>my co-op internship</b>. It is designed for <b>physical therapy research</b>, in this case to help research <b>how children learn to complete tasks when placed in different environments</b>. I was the only dedicated project member, so I <b>worked largely independently.</b> I met with my supervisor weekly to discuss goals and set deadlines, but when challenges cropped up <b>I had to take the initiative to solve them myself.</b> I was fortunate enough to be connected to different sources where I could ask questions, which was very helpful since this co-op was <b>my first time working solo with VR technology.</b> It was a very <b>rewarding process</b>, for all its challenges. From this project I learned about <b>calibrating VR experiences for different players</b>, working with <b>different VR headsets and their unique quirks</b>, and how to <b>collect and store data for external use</b>.</p>
+				<p class="project-page-about-process">I am currently working on this game as part of a <b>team of four</b> for my <b>Game Design Capstone</b> class at Northeastern University. We are developing an <b>atmospheric game</b> where the player goes on a road trip across the country, taking in <b>lush scenery</b> on their way to <b>rest stops</b> to engage in dialogue as part of an <b>overarching mystery narrative</b>. This is our <b>second semester of work</b> and we have come a long way. I am <b>one of three programmers</b> on this project, so we've had to delegate a lot of different tasks. We will have <b>more to show</b> toward the end of the semester, as we approach the end of the course and our <b>final deliverable</b>, so stay tuned!</p>
 			</div>
 			<!-- Misc. pics of game -->
 			<div class="w3-row w3-margin-top">
 				<div class="w3-half w3-center w3-padding">
-					<img src="Images/ThrowAtTargetPic1.png" style="width:100%" class="center" alt="ThrowAtTarget">
+					<img src="Images/RoadTripPic1.png" style="width:100%" class="center" alt="SleepyJeoff">
 				</div>
 				<div class="w3-half w3-center w3-padding">
-					<img src="Images/ThrowAtTargetPic3.png" style="width:100%" class="center" alt="ThrowAtTarget">
+					<img src="Images/RoadTripPic2.png" style="width:100%" class="center" alt="SleepyJeoff">
 				</div>
 			</div>
 		</div>
