--- a/computer-cat.html
+++ b/computer-cat.html
@@ -84,10 +84,10 @@
 			<!-- Misc. pics of game -->
 			<div class="w3-row w3-margin-top">
 				<div class="w3-half w3-center w3-padding">
-					<img src="Images/SleepyJeoffPic1.png" style="width:100%" class="center" alt="SleepyJeoff">
+					<img src="Images/ComputerCatPic1.png" style="width:100%" class="center" alt="ComputerCat">
 				</div>
 				<div class="w3-half w3-center w3-padding">
-					<img src="Images/SleepyJeoffPic2.png" style="width:100%" class="center" alt="SleepyJeoff">
+					<img src="Images/ComputerCatPic2.png" style="width:100%" class="center" alt="ComputerCat">
 				</div>
 			</div>
 		</div>
