--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
 			</div>
 			<div class="w3-col m6 w3-center w3-padding">
 				<div class="">
-					<a href=sleepy-jeoff.html>
-						<img src="Images/SleepyJeoffLogo.png" style="width:100%" alt="SleepyJeoff">
-						<h3 class="w3-center">Sleepy Jeoff</h3>
-						<p class="w3-center">Programming, Asset Integration, Game Design</p>
+					<a href=road-trip.html>
+						<img src="Images/RoadTripTitle.png" style="width:100%" alt="RoadTrip">
+						<h3 class="w3-center">Road Trip</h3>
+						<h4 class="w3-center">[IN PROGRESS]</h4>
+						<p class="w3-center">Senior Game Design Capstone Project</p>
 					</a>
 				</div>
 			</div>
