--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					<a href=computer-cat.html>
 						<img src="Images/ComputerCatMainMenu.png" style="width:100%" alt="ComputerCat">
 						<h3 class="w3-center">Computer Cat</h3>
-						<p class="w3-center">Enemy Design/AI, Gameplay Programming, Asset Integration</p>
+						<p class="w3-center">Game Jam Entry</p>
 					</a>
 				</div>
 			</div>
@@ -79,7 +79,7 @@
 					<a href=sleepy-jeoff.html>
 						<img src="Images/SleepyJeoffLogo.png" style="width:100%" alt="SleepyJeoff">
 						<h3 class="w3-center">Sleepy Jeoff</h3>
-						<p class="w3-center">Programming, Asset Integration, Game Design</p>
+						<p class="w3-center">Game Jam Entry</p>
 					</a>
 				</div>
 			</div>
@@ -103,7 +103,7 @@
 					<a href=bird-brigade.html>
 						<img src="Images/BirdBrigadeLogo.png" style="width:100%" alt="BirdBrigade">
 						<h3 class="w3-center">Bird Brigade</h3>
-						<p class="w3-center">UI/UX Design, Programming, Playtest Administration</p>
+						<p class="w3-center">Gameplay Programming Class Final Project</p>
 					</a>
 				</div>
 	    	</div>
