--- a/road-trip.html
+++ b/road-trip.html
@@ -35,7 +35,7 @@
 	<div class="w3-main w3-content" style="max-width:1920px; margin-top:64px">
 		<div class="w3-container w3-center w3-margin-top w3-text-black w3-padding-32">
 			<!-- TITLE -->
-			<h1 class="project-page-heading" style="margin-bottom: 20px"><b>SLEEPY JEOFF</b></h1>
+			<h1 class="project-page-heading" style="margin-bottom: 20px"><b>ROAD TRIP</b></h1>
 			<!-- First Row -->
 			<div class="w3-row">
 				<!-- Video/Logo -->
@@ -47,11 +47,7 @@
 				<!-- About The Game -->
 				<div class="w3-content w3-half w3-justify" style="max-width:1000px; margin: auto">
 					<h1 class="w3-center project-page-about">About The Game</h1>
-					<p class="w3-center w3-padding project-page-about">A <b>3D atmospheric adventure game</b> where you <b>use the mouse</b> to drive across the country and <b>solve a mystery</b>. Use objects to <b>affect Jeoff's path</b> to guide him back to his bed! The objects can also be used to <b>deflect enemies</b> like Jeoff's cat, dog, and vacuum cleaner.</p>
-					<a href=https://globalgamejam.org/2019/games/sleepy-jeoff>
-						<img src="Images/GGJLogo.png" style="width:20%" onclick="onClick(this)" class="center" alt="GGJLogo">
-						<h3 class="w3-center">Click here to download from the GGJ website!</h3>
-					</a>
+					<p class="w3-center w3-padding project-page-about">A <b>3D atmospheric adventure game</b> where you <b>use the mouse</b> to drive across the country and <b>solve a mystery</b>. Use the mouse to <b>look around at scenery</b> and <b>navigate through interactive dialogue</b>! You can also interact with <b>car features</b> like a radio and map.</p>
 				</div>
 			</div>
 			<!-- Second Row -->
